# cms

./: .gitignore  README.md  main.py  pyproject.toml  test.py
products/: products.py
shops/: stores.py
shops/data/: shops.csv
validators/: email_shop.py  validate_inputs.py
