[tool.poetry]
name = "cms"
version = "0.1.0"
description = "to be able to track current stock for a specific shop"
authors = ["derrosilee <derrosilee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tabulate = "^0.9.0"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
